Integrate JDK vector API Added: - Java vector API